--- a/app/views/yawl_rails/processes/_show_inline_js.html.haml
+++ b/app/views/yawl_rails/processes/_show_inline_js.html.haml
@@ -1,3 +1,5 @@
+= javascript_include_tag "yawl_rails/processes"
+
 :javascript
   YawlProcess.url = "#{steps_yawl_process_path(@process.id)}";
   YawlProcess.init();
