--- a/app/views/yawl_rails/processes/_step_rows.html.haml
+++ b/app/views/yawl_rails/processes/_step_rows.html.haml
@@ -1,10 +1,10 @@
 - @process.steps.each do |step|
   %tr.step{:id => "step-#{step.seq}"}
-    %td= link_to step.seq, yawl_process_step_path(@process.id, step.id)
+    %td= link_to step.seq, yawl_process_step_path(@process.name, step.id)
     %td
       = step.name
       - if step.state == "failed" && @process.current?
-        = link_to "<i class='icon-refresh icon-white'></i> Retry".html_safe, restart_yawl_process_path(@process.id), :method => :post, :class => "btn btn-mini btn-primary"
+        = link_to "<i class='icon-refresh icon-white'></i> Retry".html_safe, restart_yawl_process_path(@process.name), :method => :post, :class => "btn btn-mini btn-primary"
     %td.step-state= step.state
     %td= step.attempts.count
     %td
