--- a/app/views/yawl_rails/steps/show.html.haml
+++ b/app/views/yawl_rails/steps/show.html.haml
@@ -1,4 +1,4 @@
-%h1= link_to "Process #{@process.name}", yawl_process_path(@process.id)
+%h1= link_to "Process #{@process.name}", yawl_process_path(@process.name)
 
 %h2= "Step #{@step.seq}: #{@step.name}"
 
