add an empty partial template in processes/show so extra info can be configured to be displayed from the main app

--- a/app/views/yawl_rails/processes/show.html.haml
+++ b/app/views/yawl_rails/processes/show.html.haml
@@ -13,6 +13,7 @@
   %dt State
   %dd= @process.state
 
+= render 'process_extra_info'
 
 .progress.progress-striped.active
   .bar#process-progress{:style => "width: 0%;"}
